objects/Account.object
<CustomObject>
    <fields>
        <fullName>Annual_Remark__c</fullName>
        <label>Annual Remark</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bharath_Email__c</fullName>
        <label>Bharath Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Companies__c</fullName>
        <label>Companies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloudfulcrum</fullName>
                </value>
                <value>
                    <fullName>Release owl</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Revenue__c</fullName>
        <label>Company Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Acc_recordtype</fullName>
        <active>true</active>
        <description>creating for acc pagelayout</description>
        <label>Acc recordtype</label>
    </recordTypes>
    <recordTypes>
        <fullName>account_record_type</fullName>
        <active>true</active>
        <label>account record type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>